# Guanmo-open

./: .gitignore  AI_IMPLEMENTATION_PLAN.md  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: quality.yml  release.yml  security-check.yml
docs/: USER_GUIDE.md
docs/releases/: v0.4.0.md
scripts/: agent-tool-parser-check.ts  ai-http-transport-check.ts  bundle-budget-check.mjs  chat-history-check.ts  file-access-check.ts  markdown-export-check.tsx  markdown-math-check.tsx  markdown-preview-browser-check.js  markdown-preview-check.ts  memory-policy-check.ts  pre-push-check.mjs  rag-index-check.ts  rag-query-benchmark.ts  run-agent-parser-check.mjs  run-ai-http-transport-check.mjs  run-chat-history-check.mjs  run-file-access-check.mjs  run-markdown-export-check.mjs  run-markdown-math-check.mjs  run-markdown-preview-check.mjs  run-memory-policy-check.mjs  run-rag-index-check.mjs  run-rag-query-benchmark.mjs  run-selection-context-check.mjs  run-toast-store-check.mjs  run-update-service-check.mjs  run-update-version-check.mjs  selection-context-check.ts  toast-store-check.ts  update-service-check.ts  update-version-check.ts
src/: App.tsx  WebApp.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_http.rs  database_transactions.rs  lib.rs  perf_monitor.rs
src/hooks/: useActiveHeading.ts  useAiChat.ts  useExternalFileOpen.ts  useFileOperations.ts  useFullscreen.ts  useTauri.ts  useWorkspaceFileTree.ts
src/services/: aiChatFlow.ts  aiChatMessages.ts  aiContext.ts  aiScope.ts  chatHistory.ts  contextBuilder.ts  editorSession.ts  externalFileOpen.ts  externalHttp.ts  fileEntryActions.ts  fileOperationErrors.ts  fileSystem.ts  idleScheduler.ts  markdownBlocks.ts  markdownExport.tsx  markdownImages.ts  semver.ts  (+16 more)
(+96 files in other folders)
