[package]
name = "guanmo"
version = "1.0.4"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
windows-sys = { version = "0.60.2", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

# Tauri plugins
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"

[lib]
name = "guanmo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
