[package]
name = "guanmo"
version = "1.3.1"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
windows-sys = { version = "0.60.2", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_Diagnostics_ToolHelp", "Win32_System_ProcessStatus", "Win32_System_Threading"] }
sysinfo = "0.30"

# Tauri plugins
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "sync"] }
url = "2"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }

[lib]
name = "guanmo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
